2008-08-25  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_scroll_up):
	scrollmode -1 for really doing nothing

	* avatar.c (calculate_balloonmaxheight):
	new function

	* akfavatar.h, avatar.c (avt_set_balloon_width)
	(avt_set_balloon_height):
	new functions

	* avatar.c (avt_draw_balloon, avt_get_max_x, avt_get_max_y)
	(avt_change_avatar_image, avt_initialize):
	balloonheight and balloonwidth stored as number of characters

2008-08-24  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (open_script):
	script name now "AKFAvatar" + proper error handling

	* avatarsay.c (say_line):
	new function - handles underlining

	* avatarsay.c (process_new_line):
	function removed - handled now in say_line

	* avatarsay.c (say_line):
	handle troff style underlining and bold printing

	* avatar.c (avt_say, avt_say_len):
	don't handle backspace tricks here (avatarsay does now)

	* avatarsay.c (process_script):
	a stripline may start the text (ie. empty lines after that count)

2008-08-19  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_change_avatar_image):
	new function

	* avatarsay:
	handle changing the avatar-image in scripts

	* avatarsay.c:
	support for archive files (ar)

2008-08-15  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.15.2 released

2008-08-13  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c:
	set the default background color right at the start

	* Makefile.in:
	use $(srcdir) in every rule
	(more portable than relying on VPATH and $<)

	* configure:
	options get quoted in the generated file config.status 
	(fixes bug #23781)

2008-08-12  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c:
	restore background-color after playing a demo

	* avatar.c (avt_set_background_color):
	update the whole screen again after drawing the balloon

2008-08-11  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (execute_process):
	change settings of terminal before forking
