@@ -23,7 +23,7 @@
  * along with this program; if not, see <http://www.gnu.org/licenses/>.
  */
 
-/* $Id: avatar.c,v 2.152 2008-08-25 18:17:31 akf Exp $ */
+/* $Id: avatar.c,v 2.153 2008-08-25 18:23:38 akf Exp $ */
 
 #include "akfavatar.h"
 #include "SDL.h"
@@ -225,7 +225,7 @@ static avt_bool_t avt_visible;	/* avatar visible? */
 static avt_bool_t text_cursor_visible;	/* shall the text cursor be visible? */
 static avt_bool_t text_cursor_actually_visible;	/* is it actually visible? */
 static avt_bool_t reserve_single_keys;	/* reserve single keys? */
-static int scroll_mode;
+static int scroll_mode = 1;
 static SDL_Rect textfield;
 static SDL_Rect viewport;	/* sub-window in textfield */
 static avt_bool_t avt_tab_stops[AVT_LINELENGTH];
@@ -3904,7 +3904,6 @@ avt_initialize (const char *title, const char *icontitle,
   avt_mode = mode;
   _avt_STATUS = AVT_NORMAL;
   reserve_single_keys = AVT_FALSE;
-  scroll_mode = 1;
   newline_mode = AVT_TRUE;
   auto_margin = AVT_TRUE;
   origin_mode = AVT_TRUE;	/* for backwards compatibility */
@@ -3921,7 +3920,7 @@ avt_initialize (const char *title, const char *icontitle,
 
   SDL_WM_SetCaption (title, icontitle);
   avt_register_icon ();
-  SDL_SetError ("$Id: avatar.c,v 2.152 2008-08-25 18:17:31 akf Exp $");
+  SDL_SetError ("$Id: avatar.c,v 2.153 2008-08-25 18:23:38 akf Exp $");
 
   /*
    * Initialize the display, accept any format
